--- a/asset/style.css
+++ b/asset/style.css
@@ -1,9 +1,10 @@
 body {
     font-family: "Inter";
-    background-color: #00000f;
+    /* background-color: #00000f */
     color: #FFFFFF;
     margin-left: 20px;
     margin-right: 20px;
+    background-image: url(/asset/img/background.svg);
 }
 
 h1{
@@ -48,6 +49,7 @@ a {
 }
 
 nav {
+    background-color: black;
     display: flex;
     flex-direction: row;
     align-self: stretch;
@@ -70,23 +72,15 @@ nav {
     gap: 20px;
 }
 
-.Login {
-    border-color: #FFFFFF;
-    border-style: solid;
-    border-width: 2px;
-    border-radius: 4px;
-    padding: 8px;
-    
-    color:#FFFFFF;
-    font-weight: bold;
-    text-decoration: none;
-}
-
 .hero {
    display: flex;
    justify-content: center;
    margin-top: 80px;
    margin-bottom: 50px;
+}
+
+.banner {
+    border: 1px solid white;
 }
 
 .topup {
