--- a/asset/style.css
+++ b/asset/style.css
@@ -2,6 +2,7 @@ body {
     font-family: "Inter";
     /* background-color: #00000f */
     color: #FFFFFF;
+    margin-top: 0px;
     margin-left: 20px;
     margin-right: 20px;
     background-image: url(/asset/img/background.svg);
@@ -57,6 +58,7 @@ nav {
     align-items: center;
     border-bottom: 1px solid grey;
     margin: -5px -20px;
+    margin-top: 0px;
     padding: 10px 20px;
 }
 
