--- a/asset/style.css
+++ b/asset/style.css
@@ -50,7 +50,7 @@ a {
 }
 
 nav {
-    background-color: black;
+    background-color: rgb(0, 0, 0);
     display: flex;
     flex-direction: row;
     align-self: stretch;
@@ -82,7 +82,7 @@ nav {
 }
 
 .banner {
-    border: 1px solid white;
+    border: 1px solid silver;
 }
 
 .topup {
