--- a/asset/style.css
+++ b/asset/style.css
@@ -6,6 +6,9 @@ body {
     margin-left: 20px;
     margin-right: 20px;
     background-image: url(/asset/img/background.svg);
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
 }
 
 h1{
