--- a/asset/style.css
+++ b/asset/style.css
@@ -5,7 +5,7 @@ body {
     margin-top: 0px;
     margin-left: 20px;
     margin-right: 20px;
-    background-image: url(/asset/img/background.svg);
+    background-image: url(/asset/img/Bg2.svg);
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
