--- a/asset/style.css
+++ b/asset/style.css
@@ -1,11 +1,10 @@
 body {
     font-family: "Inter";
-    /* background-color: #00000f */
     color: #FFFFFF;
     margin-top: 0px;
     margin-left: 20px;
     margin-right: 20px;
-    background-image: url(/asset/img/TryOne.svg);
+    background-image: url(asset/img/TryOne.svg);
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
