--- a/asset/style.css
+++ b/asset/style.css
@@ -4,7 +4,7 @@ body {
     margin-top: 0px;
     margin-left: 20px;
     margin-right: 20px;
-    background-image: url(asset/img/TryOne.svg);
+    background-image: url(../asset/img/TryOne.svg);
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
